# pytorch-tutorial

./: .dockerignore  .env  .gitignore  Makefile  README.md  install_labextensions  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.development.vscode.yml
docker/: Dockerfile  Dockerfile.tensorboard  docker-compose.development.yml  docker-compose.yml
notebooks/: tensorboard.ipynb
pytorch_tutorial/: Untitled.ipynb  config.yml  reproduction.ipynb  train.py
pytorch_tutorial/data_loader_preparer/: train_valid_preparer.py
pytorch_tutorial/evaluation/: evaluation_result.py  evaluation_result_writer.py  evaluator.py  inference_result.py  inference_result_aggregator.py  inferencer.py
pytorch_tutorial/models/: pl_model.py  simple_cnn.py  tensorboard_logger_mixin.py
