[tool.poetry]
name = "pytorch-tutorial"
version = "0.1.0"
description = ""
authors = ["kanada0727 <kanada@pcl.cs.waseda.ac.jp>"]

[tool.taskipy.tasks]
jupyter= "poetry run jupyter lab --allow-root --ip 0.0.0.0"
jupyter-update-password= "poetry run jupyter server password"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
pandas = "^1.2.1"
torch = {url = "https://download.pytorch.org/whl/cu110/torch-1.7.1%2Bcu110-cp38-cp38-linux_x86_64.whl"}
pytorch-lightning = "^1.1.8"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.5"
ipywidgets = "^7.6.3"
plotly = "^4.14.3"
cufflinks = "^0.17.3"
flake8 = "^3.8.4"
isort = "^5.7.0"
vulture = "^2.3"
black = "^20.8b1"
taskipy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
